# routes/specialty.js
@@ -3,6 +3,14 @@ const router = express.Router();
 
 const specialtyController = require('../controllers/specialty');
 
-router.get('/:specialty', specialtyController.getSpecialty);
+router.get('/', specialtyController.getAll);
+
+router.get('/:specialtyName', specialtyController.getSpecialty);
+
+router.post('/', specialtyController.createSpecialty);
+
+router.put('/:specialtyName', specialtyController.updateSpecialty);
+
+router.delete('/:specialtyName', specialtyController.deleteSpecialty);
 
 module.exports = router;
